# icubworld

./: .gitignore  CMakeLists.txt  README.md
app/scripts/: cameras_calib_bayer_640_480_and_320_240.xml  cameras_calib_bayer_640_480_and_320_240.xml.template  icubworld_DUMPER.xml  icubworld_ICUB.xml  icubworld_LAPTOP.xml  icubworld_depth.xml.template  icubworld_dumpers.xml.template  icubworld_motion.xml.template
modules/: CMakeLists.txt
modules/include/: managerThread.h  storerThread.h  transformerThread.h  transformerThread.h~
modules/src/: main.cpp  managerThread.cpp  storerThread.cpp  transformerThread.cpp
post_processing_matlab /: process1_ICUBWORLDULTIMATE_synch_BB2IMG.m  process2a_ICUBWORLDULTIMATE_put_IMG_in_folders.m  process2b_ICUBWORLDULTIMATE_put_BB_in_folders.m  process3_ICUBWORLDULTIMATE_change_tree_merge_LR.m  process4_ICUBWORLDULTIMATE_manual_rm_folders.sh  process5a_ICUBWORLDULTIMATE_correct_label_typos.m  process5b_ICUBWORLDULTIMATE_check_labels_across_days.m  process6_ICUBWORLDULTIMATE_synch_R2L.m  process7a_ICUBWORLDULTIMATE_segment_L.m  process7b_ICUBWORLDULTIMATE_segment_R_CENTROID_disp.m  process7c_ICUBWORLDULTIMATE_segment_R_BB_disp.m  process9_ICUBWORLDULTIMATE_change_tree.m  process_ICUBWORLDULTIMATE_convert_images_or_copy_registries.m
